# InfiniteFluxVibe

./: .gitignore  CLAUDE.md  Cargo.toml
.claude/agents/: combat.md  economy.md  governance.md  networking.md  qa.md  simulation.md  tech.md  ui.md
.github/workflows/: ci.yml
crates/if_client/: Cargo.toml
crates/if_client/src/: audio.rs  blueprint_systems.rs  building_labels.rs  camera.rs  combat_view.rs  galaxy_view.rs  grid_renderer.rs  hud.rs  logistics.rs  main.rs  market_view.rs  net.rs  notifications.rs  orbital_view.rs  placement.rs  save_load.rs  ship_view.rs  tooltips.rs  tutorial.rs  ui_panels.rs  world_setup.rs
crates/if_combat/: Cargo.toml
crates/if_combat/src/: ai.rs  capacitor.rs  damage.rs  fitting.rs  fleet.rs  lib.rs  loot.rs  position.rs  targeting.rs  tick.rs  weapon.rs
crates/if_common/: Cargo.toml
crates/if_common/src/: item.rs  lib.rs  recipe.rs  save.rs  skill.rs
crates/if_economy/: Cargo.toml
crates/if_economy/src/: contract.rs  credits.rs  lib.rs  order_book.rs  price_history.rs  wallet.rs
crates/if_factory/: Cargo.toml
crates/if_factory/src/: blueprint.rs  building.rs  inventory.rs  lib.rs  mining.rs  power.rs  production.rs  stats.rs  transport.rs
crates/if_protocol/: Cargo.toml
crates/if_protocol/src/: lib.rs
crates/if_server/: Cargo.toml
crates/if_server/src/: main.rs  net.rs
crates/if_server/tests/: ping_pong.rs
crates/if_world/: Cargo.toml
crates/if_world/src/: bodies.rs  galaxy.rs  generation.rs  grid.rs  lib.rs  logistics.rs  ships.rs
docs/: AGENTS.md  DESIGN_SPEC.md  IMPLEMENTATION_PLAN.md  NETWORKING.md  UX_DESIGN.md  WORKFLOWS.md
