[workspace]
resolver = "2"

# A workspace allows us to manage multiple crates in a single repository.
# Each member is a separate crate with its own Cargo.toml.
members = [
    "crates/if_common",
    "crates/if_world",
    "crates/if_factory",
    "crates/if_client",
    "crates/if_protocol",
    "crates/if_server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Developer"]
description = "A single-shard MMO industrial automation simulator"

# Workspace dependencies allow us to define versions in one place.
# If multiple crates use 'bevy', they will all use the same version.
[workspace.dependencies]
bevy = { version = "0.18" }
bevy_egui = { version = "0.39" }
serde = { version = "1", features = ["derive"] }
bincode = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "io-util", "time", "rt"] }
