[package]
name = "if_economy"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Order book matching, markets, contracts, currency"

[dependencies]
bevy = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
if_common = { path = "../if_common" }
if_factory = { path = "../if_factory" }
