[package]
name = "if_world"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "World simulation: grid, resources, ticking logic"

[dependencies]
bevy = { workspace = true }
serde = { workspace = true }
if_common = { path = "../if_common" }
if_factory = { path = "../if_factory" }

[dev-dependencies]
bincode = { workspace = true }
